--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -1,1 +1,47 @@
+name: Daily Tweet Snapshots (Nitter)
+
+on:
+  schedule:
+    - cron: '0 22 * * *'
+  workflow_dispatch:
+
+jobs:
+  snapshot:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+
+      - name: Install Feedparser
+        run: pip install feedparser
+
+      - name: Fetch tweet links from Nitter RSS
+        run: python scripts/fetch_from_nitter.py
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: Install Puppeteer
+        run: npm install puppeteer@21.3.8
+
+      - name: Screenshot Tweets
+        run: node scripts/screenshot_tweets.js
+
+      - name: Commit and Push Results
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "bot@users.noreply.github.com"
+          git add screenshots/
+          git add public/community_feed/
+          git commit -m "🖼️ Daily tweet screenshots (Nitter RSS)"
+          git push
+        continue-on-error: true
 
