--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -2,8 +2,9 @@ name: Daily Tweet Snapshots (Nitter)
 
 on:
   schedule:
-    - cron: '0 22 * * *'  # runs daily at 10PM UTC
-  workflow_dispatch:
+    - cron: '0 6 * * *'  # runs daily at 6AM UTC
+    - cron: '0 18 * * *' # runs daily at 6PM UTC
+  workflow_dispatch:     # allows manual trigger
 
 jobs:
   snapshot:
@@ -12,6 +13,25 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 1  # Shallow clone for faster checkout
+
+      # Add caching for dependencies
+      - name: Cache Python packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Cache Node modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -23,6 +43,7 @@ jobs:
 
       - name: Fetch tweet links from Nitter RSS
         run: python scripts/fetch_from_nitter.py
+        continue-on-error: false # Fail if tweet fetching fails
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -34,6 +55,9 @@ jobs:
 
       - name: Screenshot Tweets
         run: node scripts/screenshot_tweets.js
+        env:
+          PUPPETEER_DOWNLOAD_PATH: ~/.cache/puppeteer
+        timeout-minutes: 15  # Prevent hanging runs
 
       - name: Commit and Push Results
         run: |
@@ -41,6 +65,12 @@ jobs:
           git config user.email "bot@users.noreply.github.com"
           git add screenshots/
           git add public/community_feed/
-          git commit -m "🖼️ Daily tweet screenshots (Nitter RSS)"
+          git commit -m "🖼️ Daily tweet screenshots (Nitter RSS) $(date -u +"%Y-%m-%d %H:%M UTC")" || echo "No changes to commit"
           git push
         continue-on-error: true
+
+      # Add error notification (optional)
+      - name: Notify on Failure
+        if: failure()
+        run: echo "Tweet snapshot workflow failed. Check logs for details."
+        # You could add actual notification here, e.g. sending an email or webhook
